--- a/styles/css/search/vtex.rich-text.css
+++ b/styles/css/search/vtex.rich-text.css
@@ -12,3 +12,11 @@
   font-size: 1.25rem;
   line-height: 1.15rem;
 }
+
+.pontos {
+font-size:small ;
+padding: 0 10 0 10 ;
+margin-left: 10;
+margin-block-start: 10px;
+
+}
