--- a/react/styles.css
+++ b/react/styles.css
@@ -1,6 +1,9 @@
 .pontos {
   font-size: small;
-  padding: 0 10 0 10;
-  margin-left: 10;
+  padding: 0 30 0 10;
+  margin-left: 30;
   margin-block-start: 10px;
+  text-align: right;
+  color: brown;
 }
+
