--- a/react/styles.css
+++ b/react/styles.css
@@ -1,12 +1,19 @@
 .pontos {
-  font-size: small;
-  padding: 0 30 0 10;
-  margin-left: 30;
-  margin-block-start: 10px;
-  text-align: right;
-  color: brown;
+  font-family: "trebuchet MS", sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 1.2pt;
+  word-spacing: 5.4pt;
+  height:46px;
   display: flex;
-  align-items: center;
+align-items: baseline;
+  background-color: #000000;
+  border-radius: 25px;
+  border: none;
+  color: white;
+  padding: 15px 15px;
+  margin: 10px 2px;
+
 }
 
 @keyframes spin {
